# note-taking-app

./: .gitignore  AI_USAGE_LOG.md  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .coveragerc  .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/api/: admin.py  models.py  signals.py  urls.py  views.py
backend/api/cache/: category_cache.py
backend/api/design/: uml.html
backend/api/management/commands/: sync_default_categories.py
backend/api/migrations/: 0001_initial.py  0002_category_defaults_and_ownership.py
backend/api/serializers/: category_serializer.py  note_serializer.py
backend/api/services/: category_service.py  note_service.py
backend/api/tests/: test_admin.py  test_auth.py  test_categories_api.py  test_management_commands.py  test_models.py  test_note_payload_validator.py  test_notes_api.py
backend/api/tests/views/: test_health.py
backend/api/validators/: note_payload.py
backend/api/views/: __init__.py  auth.py  category.py  health.py  note.py
backend/app/: settings.py  urls.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx
frontend/app/home/: home.module.css  page.tsx
frontend/app/login/: login.module.css  page.tsx
frontend/app/signup/: page.tsx  signup.module.css
frontend/components/categories/: category-selector.module.css  category-selector.tsx
frontend/components/icons/: eye-closed-icon.tsx  eye-open-icon.tsx
frontend/services/: api-interfaces.ts  api.ts
(+20 files in other folders)
