[project]
name = "note-taking-app-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.11",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "ruff>=0.13.2",
]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = ["test_*.py", "*_tests.py"]
testpaths = ["api/tests"]
addopts = """
    --cov=api
    --cov-report=term-missing
    --cov-fail-under=98
    --cov-config=.coveragerc
"""

[tool.ruff]
line-length = 79
exclude = [
    "*/migrations",
]
